dumb fix for gap in studio page

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,7 @@ h5 {
 h6 {
     @apply text-base font-bold;
 }
+
+body > br {
+    display: none;
+}
